# RustyVault

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  design.md  netlify.toml  req.md  rustfmt.toml
.github/workflows/: deploy-website.yml  rust.yml  website.yml
doc/: crypto.md  design-cn.md  design.md  install.md  quick-start.md  req-cn.md
doc/backend/database/mysql/: mysql.md
docs/: NOTES.md  README.md  docusaurus.config.js  netlify.toml  package.json
docs/docs/: design.md  install.md  quick-start.md  req.md  tongsuo-icla-openatom.md
docs/docs/backend/database/: overview.md
docs/i18n/zh-CN/: code.json
docs/i18n/zh-CN/docusaurus-plugin-content-docs/: current.json  version-0.0.1.json
docs/i18n/zh-CN/docusaurus-plugin-content-docs/current/: design.md  quick-start.md
docs/i18n/zh-CN/docusaurus-plugin-content-docs/version-0.0.1/: design.md  install.md  req.md
docs/i18n/zh-CN/docusaurus-theme-classic/: footer.json  navbar.json
docs/src/components/: HomepageCompare.js  HomepageCompare.module.css  HomepageFeatures.js  HomepageFeatures.module.css  HomepageMascot.js  HomepageMascot.module.css  HomepageProducts.js  HomepageProducts.module.css
docs/src/css/: custom.css
docs/src/pages/: index.js  index.module.css
docs/static/blog/: index.html
docs/static/blog-assets/css/: styles.8f8b9a84.css
docs/static/blog-assets/js/: 0029fae4.109521ed.js  00af36bb.3834c555.js  00e4fbb7.7a429cd5.js  0167bfd0.5e8e4db6.js  018dafad.35215401.js  01a85c17.995be89b.js  01cda57f.31e5d70b.js  0255498b.0161cbd4.js  02bc0447.511dd1e8.js  03d1c922.77ceeb76.js  03dd089f.b53281ce.js  055053a3.e7e161f9.js  07c2a573.4901da91.js  090877e7.afcb4f30.js  09c9b397.a59a0cb6.js  0a2799dd.89b16698.js  0bd70cd7.385554b2.js  0c1d2e01.3a519d49.js  0c3cdd66.ddd612a7.js  0d608699.9ce285ec.js  0da09081.8b103ead.js  10d2e3f1.ad861dec.js  10dfc261.abcef546.js  10f20d87.d8815ff8.js  1156aa91.0e5005b6.js  13a1cf8c.e30a227a.js  13a26cbe.64485bb8.js  13c84177.a62350ba.js  15544a9f.a467bdc4.js  162122a6.ca3785f7.js  1668842c.4fa5d9f2.js  17357cc0.b4976b6b.js  17896441.5c663038.js  188e1599.d745d9e8.js  188fe170.97eef741.js  18c8bb48.53c36e79.js  18d50a59.b22fcd4c.js  191ad80f.fc478503.js  193ff0cf.b3c00918.js  1a4e3797.906374ac.js  (+344 more)
docs/static/blog/2021-07-01-welcome/: index.html
docs/static/blog/2021-08-07-hello-world/: index.html
docs/static/blog/2021-08-30-release-model/: index.html
docs/static/blog/2021-09-20-introducing-sea-orm/: index.html
docs/static/blog/2021-10-01-whats-new-in-0.2.4/: index.html
docs/static/blog/2021-10-15-whats-new-in-0.3.0/: index.html
docs/static/blog/2021-11-19-whats-new-in-0.4.0/: index.html
docs/static/blog/2022-01-01-whats-new-in-0.5.0/: index.html
docs/static/blog/2022-02-07-whats-new-in-0.6.0/: index.html
docs/static/blog/2022-03-26-whats-new-in-0.7.0/: index.html
docs/static/blog/2022-04-04-introducing-starfish-ql/: index.html
docs/static/blog/2022-05-14-faq-01/: index.html
docs/static/blog/2022-05-15-whats-new-in-0.8.0/: index.html
docs/static/blog/2022-06-02-summer-of-code-2022-intro/: index.html
docs/static/blog/2022-07-17-whats-new-in-0.9.0/: index.html
docs/static/blog/gsoc-2022/: index.html
docs/versioned_docs/version-0.0.1/: crypto.md  design.md
examples/: example.json
migrations/2024-03-07-084239_create_vault_table/: down.sql  up.sql
src/: context.rs  core.rs  errors.rs  handler.rs  lib.rs  module_manager.rs  mount.rs  router.rs  schema.rs  shamir.rs  test_utils.rs  util.rs
src/api/: auth.rs  auth_token.rs  client.rs  logical.rs  mod.rs  secret.rs  sys.rs
src/cli/: config.rs  kv_util.rs  mod.rs  util.rs
src/cli/command/: auth.rs  auth_disable.rs  auth_enable.rs  auth_help.rs  auth_list.rs  auth_move.rs  delete.rs  format.rs  list.rs  login.rs  mod.rs  operator.rs  operator_init.rs  operator_seal.rs  operator_unseal.rs  policy.rs  policy_delete.rs  policy_list.rs  policy_read.rs  policy_write.rs  read.rs  secrets.rs  secrets_disable.rs  secrets_enable.rs  secrets_list.rs  secrets_move.rs  server.rs  status.rs  write.rs
src/http/: logical.rs  metrics.rs  mod.rs  sys.rs
src/logical/: auth.rs  backend.rs  connection.rs  field.rs  lease.rs  mod.rs  path.rs  request.rs  response.rs  secret.rs
src/metrics/: http_metrics.rs  manager.rs  middleware.rs  mod.rs  system_metrics.rs
src/modules/: mod.rs
src/modules/auth/: expiration.rs  mod.rs  token_store.rs
src/modules/credential/: mod.rs
src/modules/credential/approle/: mod.rs  path_login.rs  path_role.rs  path_tidy_secret_id.rs  validation.rs
src/modules/credential/cert/: cli.rs  mod.rs  path_certs.rs  path_config.rs  path_crls.rs  path_login.rs
src/modules/credential/token/: cli.rs
src/modules/credential/userpass/: cli.rs  mod.rs  path_login.rs  path_users.rs
src/modules/crypto/: mod.rs
src/modules/crypto/crypto_adaptors/: common.rs  mod.rs  openssl_adaptor.rs  tongsuo_adaptor.rs
src/modules/kv/: mod.rs
src/modules/pki/: field.rs  mod.rs  path_config_ca.rs  path_config_crl.rs  path_fetch.rs  path_issue.rs  path_keys.rs  path_revoke.rs  path_roles.rs  path_root.rs  util.rs
src/modules/policy/: acl.rs  mod.rs  policy.rs  policy_store.rs
src/modules/system/: mod.rs
src/storage/: barrier.rs  barrier_aes_gcm.rs  barrier_view.rs  mod.rs
src/storage/mysql/: mod.rs  mysql_backend.rs
src/storage/physical/: error.rs  etcd.rs  file.rs  mock.rs  mod.rs
src/storage/sqlx/: mod.rs
src/utils/: cert.rs  cidr.rs  crypto.rs  db.rs  ip_sock_addr.rs  ipaddr.rs  key.rs  kv_builder.rs  locks.rs  mod.rs  ocsp.rs  policy.rs  salt.rs  seal.rs  sock_addr.rs  sockaddr.rs  string.rs  token_util.rs  unix_sock_addr.rs  unixsock.rs
tests/: test_default_logical.rs
tests/mysql_ini/: my.cnf
