[package]
name = "rusty_vault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "^1.0" }
thiserror = { version = "^1.0" }
serde = { version = "^1.0", features = ["derive", "rc", "alloc"] }
serde_derive = "^1.0"
serde_json = "^1.0"
go-defer = "^0.1"
rand = "^0.8"
openssl = "0.10"
derivative = "2.2.0"
enum-map = "2.6.1"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
radix_trie = "0.2.1"
lazy_static = "1.4.0"
regex = "1.9.5"
clap = { version = "4.4", features = ["wrap_help", "suggestions"] }
sysexits = { version = "0.7", features = ["std"] }
build-time = "0.1"
hcl-rs = "0.16"
daemonize = "0.5"
actix-web = { version = "4.4", features = ["openssl"] }
actix-tls = "3.1"
actix-rt = "2.9"
log = "0.4"
env_logger = "0.10"

[[bin]]
name = "rusty_vault"
path = "bin/rusty_vault.rs"

[[test]]
name = "test_default_logical"
path = "tests/test_default_logical.rs"
